--- a/login.html
+++ b/login.html
@@ -4,14 +4,15 @@
         <title>Login - AceleraDev - Logs</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="bootstrap/4.1.3/css/bootstrap.min.css">
+        <script src="login.js"></script>
     </head>
     <body>
         <h1>Login</h1>
-        <form onSubmit="onclick()">
+        <form onSubmit="loginclick()">
             <input type="text"/>
             <input type="password"/>
-            <button type="button" class="btn btn-outline-primary">Primary</button>
-            <button type="button" class="btn btn-outline-secondary">Secondary</button>
+            <button type="submit" class="btn btn-outline-primary">login</button>
+            <button onclick="cadastrarClick()" type="button" class="btn btn-outline-secondary">cadastrar</button>
         </form>
     </body>
 </html>
